@@ -33,6 +33,7 @@
 	   :aif
 	   :call-hook
 	   :add-hook
+	   :remove-hook
 	   :dbg
 	   :dbgnl
 	   :with-all-internal-symbols
@@ -127,6 +128,11 @@ Return the result of the last hook"
 
 (defmacro add-hook (hook &rest value)
   `(setf ,hook (append ,hook (list ,@value))))
+
+(defmacro remove-hook (hook &rest value)
+  (let ((i (gensym)))
+    `(dolist (,i (list ,@value))
+      (setf ,hook (remove ,i ,hook)))))
 
 
 
